feat(catalog): publish native inference evidence
* feat(catalog): qualify SmolLM2 native RAG

* fix(catalog): enforce model contribution evidence

* feat(catalog): qualify Qwen3 native RAG

* feat(catalog): qualify Qwen2.5 Coder native RAG

* feat(catalog): qualify Qwen3 0.6B pure Java RAG

* feat(catalog): qualify Qwen2.5 Coder Q4 hybrid RAG

* feat(catalog): qualify Qwen2.5 Coder 1.5B RAG

* feat(catalog): publish native inference evidence